--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,7 @@ label {
   width: 350px;
   background: #a9c8be;
   border-radius: 8px;
+  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
 }
 
 .menu-container img {
