--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
+
+* {
+  font-family: "Karla", sans-serif;
+}
+
 body {
   width: 100%;
   margin: 0 auto;
@@ -12,6 +18,7 @@ a {
 
 nav {
   z-index: 10001;
+  background-color: #cccccc;
 }
 
 .navbar {
@@ -21,9 +28,14 @@ nav {
   align-items: center;
 }
 
+.logo {
+  width: 250px;
+}
+
 nav ul li {
   display: inline-block;
   padding: 1em;
+  font-size: 1.25rem;
 }
 
 nav ul li a {
@@ -87,6 +99,12 @@ h3 {
   font-size: 25px;
 }
 
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .banner p {
   font-size: 20px;
   max-width: 520px;
@@ -103,20 +121,25 @@ button {
   border-radius: 12px;
   font-size: 20px;
   font-weight: bold;
+  transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+  transform: scale(1.05);
   cursor: pointer;
 }
 
 .banner-img {
-  position: absolute;
   right: 13%;
   top: 15%;
-  width: 400px;
+  min-width: 600px;
 }
 
 .banner-img img {
   width: 100%;
   height: 400px;
-  border-radius: 20px;
+  border-radius: 15px;
+  object-fit: cover;
 }
 
 form,
@@ -175,72 +198,86 @@ label {
   align-items: center;
   flex-wrap: wrap;
 }
+
+/* MENU UPDATE CSS */
+
 .cards {
   margin-top: 30px;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  gap: 2rem 1rem;
 }
 
 .menu-items {
-  /* height: 400px; */
-  width: 350px;
+  width: calc(33.33% - 20px); /* Adjust the width as per your layout needs */
+  margin: 10px;
   background: #a9c8be;
   border-radius: 8px;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.25);
 }
 
-.menu-container img {
+.menu-items img {
   width: 100%;
-  height: 233px;
-  border-radius: 8px;
+  height: 250px; /* Adjust the height as per your layout needs */
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  object-fit: cover; /* Ensures the image fills the container without distorting */
 }
 
 .menu-content {
-  padding: 5px 15px;
+  padding: 15px;
 }
 
 .menu-content .heading {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .orderbtn {
-  padding: 5px 12px;
-  margin-bottom: 20px;
+  padding: 8px 20px;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: bold;
+  background-color: #f4ce14;
+  border: none;
+  border-radius: 5px;
 }
 
-footer section {
-  padding: 10px 13%;
+.orderbtn:hover {
+  background-color: #495e57;
+  color: white;
+}
+
+@media (max-width: 992px) {
+  .menu-items {
+    width: calc(50% - 20px);
+  }
+}
+
+@media (max-width: 576px) {
+  .menu-items {
+    width: calc(100% - 20px);
+  }
+}
+
+/* MENU UPDATE CSS */
+
+footer {
   display: flex;
-  justify-content: space-between;
-  align-items: start;
+  justify-content: center;
+  align-items: center;
+  background-color: #333333;
+  color: white;
+  padding-top: 12px;
 }
 
-.company-info img {
-  margin-top: 12px;
-  cursor: pointer;
-  width: 200px;
+.footer-logo {
+  height: 80px;
 }
 
-.company-info p {
-  width: 320px;
-}
-
-footer h3 {
-  font-size: 18px;
-}
-
-footer ul {
-  padding: 0;
-}
-
-footer ul li {
-  padding: 8px 0;
+.footer-text {
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 768px) {
