--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,13 @@ body {
 li {
   list-style: none;
 }
+
 a {
   text-decoration: none;
 }
 
 nav {
   z-index: 10001;
-  background-color: #cccccc;
 }
 
 .navbar {
@@ -67,49 +67,47 @@ nav ul li a:hover {
 .nav-links.visible {
   flex-direction: column;
   position: absolute;
-  top: 40px;
+  top: 45px;
+  height: 80vh;
   right: 0;
   width: 100%;
-  background-color: #495e57;
+  background: rgb(69, 69, 69, 0.8);
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: all 0.3s ease-in-out;
+  color: white;
 }
 
-/* header section */
-
-.header {
+/* HEADER TRY */
+#landing {
   background-color: #495e57;
-  padding: 40px 0;
-}
-
-.header section {
-  color: #edefee;
-  padding: 10px 13%;
-  position: relative;
-}
-
-h2 {
-  color: #f4ce14;
-  font-size: 40px;
-}
-
-h3 {
-  font-size: 25px;
+  padding: 40px 20px;
 }
 
 .banner {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 3rem;
+}
+
+.banner h2 {
+  color: #f4ce14;
+  font-size: 3.25rem;
+}
+
+.banner h3 {
+  font-size: 2.25rem;
+  color: white;
 }
 
 .banner p {
-  font-size: 20px;
+  font-size: 1.25rem;
   max-width: 520px;
   line-height: 1.5;
   margin-bottom: 30px;
+  color: white;
 }
 
 button {
@@ -129,18 +127,20 @@ button:hover {
   cursor: pointer;
 }
 
-.banner-img {
-  right: 13%;
-  top: 15%;
-  min-width: 600px;
+.banner__image {
+  margin-top: 20px; /* Add space between the content and the image */
+  width: 100%;
+  max-width: 600px; /* Limit the maximum width of the image */
 }
 
-.banner-img img {
+.banner__image img {
   width: 100%;
-  height: 400px;
+  height: 350px; /* Maintain aspect ratio */
   border-radius: 15px;
   object-fit: cover;
 }
+
+/* HEADER TRY */
 
 form,
 .comfirm {
@@ -183,22 +183,21 @@ label {
 
 /* menu items */
 
-.menu-container {
-  margin: 110px auto;
-  padding: 10px 13%;
-}
-
-.menu-container h2 {
-  color: #000;
-}
-
-.menu-header {
+#menu {
+  padding: 40px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
 }
 
+.menu-title {
+  color: #000;
+  font-size: 3rem;
+}
+
+.menu-container {
+  max-width: 1200px;
+}
 /* MENU UPDATE CSS */
 
 .cards {
@@ -218,10 +217,10 @@ label {
 
 .menu-items img {
   width: 100%;
-  height: 250px; /* Adjust the height as per your layout needs */
+  height: 250px;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  object-fit: cover; /* Ensures the image fills the container without distorting */
+  object-fit: cover;
 }
 
 .menu-content {
@@ -291,7 +290,6 @@ footer {
 
   .nav-links.visible {
     display: flex;
-    background: #333333;
     z-index: 1000;
     padding: 20px 0;
   }
@@ -339,6 +337,14 @@ footer {
   }
   .company-info p {
     width: 100%;
+  }
+  .banner {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .banner__image {
+    padding: 20px 20px;
+    min-width: 80%;
   }
 }
 
