--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,7 @@ button:hover {
 /* FORM SECTION TRY ----------------------------------*/
 #booking_form {
   width: 90vw;
+  height: 85vh;
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
@@ -162,15 +163,17 @@ fieldset {
 
 label {
   display: block;
+  font-size: 1.15rem;
   margin-bottom: 8px;
 }
 
 input[type="text"],
 input[type="date"],
+input[type="number"],
 select {
   width: 100%;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
@@ -198,10 +201,39 @@ input[type="submit"]:hover {
 .error-message {
   color: #dc3545;
   font-size: 14px;
-  margin-top: 4px;
+  margin-bottom: 8px;
 }
 
 /* FORM SECTION TRY */
+
+/* CONFIRMED BOOKING TRY------------------ */
+.confirmation-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  background-color: #f4f4f4;
+}
+
+.confirmation-content {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.confirmation-content h1 {
+  font-size: 36px;
+  color: #333333;
+}
+
+.confirmation-content p {
+  font-size: 18px;
+  color: #666666;
+}
+
+/* CONFIRMED BOOKING TRY------------------ */
 
 /* form,
 .comfirm {
